--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">Comidas</h2>
                         <p class="text-white-50">
-                            En la comida peruana, encontramos buena zazón de todos los chefsitos, como el lomito saltado, el shambar, el seviche
-                            <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
-                            The theme is open source, and you can use it for any purpose, personal or commercial.
+                            En la comida peruana, encontramos buena zazón de todos los chefsitos, como el lomito saltado, el shambar, el seviche                           
                         </p>
                     </div>
                 </div>
@@ -69,8 +67,8 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <h4>Platos Típicos</h4>
+                            <p class="text-black-50 mb-0">El plato nacional es el plato, comida o bebida que representa los gustos particulares de una nación, región o comunidad.</p>
                         </div>
                     </div>
                 </div>
