--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                    <h4 class="text-white">Lomitos Saltado</h4>
+                                    <p class="mb-0 text-white-50">Particularmente es un plato que se come con mucha delicia y es un plato muy común dentro del Perú, hecho a base de carne de res, papas fritas, cebollita y arrozito</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -94,8 +94,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Mountains</h4>
-                                    <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                                    <h4 class="text-white">Seviche</h4>
+                                    <p class="mb-0 text-white-50">-un plato a base de pescado blanco y se come sobre todo en la costa y en el norte peruano</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
