--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">Comidas</h2>
                         <p class="text-white-50">
-                            En la comida peruana, encontramos buena zazón de todos los chefsitos, como el lomito saltado, el shambar, el seviche                           
+                            En la comida peruana, encontramos buena zazón de todos los chefsitos, como el lomito saltado, el shambar, el ceviche                           
                         </p>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Seviche</h4>
+                                    <h4 class="text-white">Ceviche</h4>
                                     <p class="mb-0 text-white-50">-un plato a base de pescado blanco y se come sobre todo en la costa y en el norte peruano</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
